examples/should_pass/tight-send.anvil
chan ch {
    left req : (logic@req)
}

proc top(e : right ch) {
    reg r : logic;
    loop {
        send e.req (*r) >>
        cycle 1
    }
}