examples/should_fail/chan-class-undefined.anvil
proc main(endp : left ch) {
    loop {
        cycle 1
    }
}
